--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "ew-color-picker": "^1.9.9",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
@@ -218,6 +219,7 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "codemirror": "^5.65.1",
+    "echarts": "^5.3.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
     "electron-updater": "^4.6.5",
