--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     ]
   },
   "build": {
-    "productName": "CodeMemory",
+    "productName": "代码记忆",
     "appId": "org.erb.ElectronReact",
     "asar": true,
     "asarUnpack": "**\\*.{node,dll}",
@@ -189,6 +189,8 @@
     "husky": "^7.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.5",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "lint-staged": "^12.1.4",
     "mini-css-extract-plugin": "^2.4.5",
     "opencollective-postinstall": "^2.0.3",
@@ -219,14 +221,13 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "codemirror": "^5.65.1",
+    "cos-js-sdk-v5": "^1.3.7",
     "echarts": "^5.3.2",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.4",
     "electron-updater": "^4.6.5",
     "history": "^5.2.0",
     "immer": "^9.0.12",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
