--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "@/*": ["src/renderer/*"],
       "assets/*": ["assets"],
       "static/*": ["static"],
-      "request/*": ["src/request/*"]
+      "request/*": ["src/request/*"],
+      "utils/*": ["src/utils/*"]
     },
     "declaration": true,
     "declarationMap": true,
